# channels

./: .gitignore  LICENSE  README.md
channels/: CMakeLists.txt
channels/app/: CMakeLists.txt
channels/app/src/: main.cc
channels/lib/: CMakeLists.txt
channels/lib/include/: channel.h  fifo.h  receiver.h  sender.h
channels/lib/src/: fifo.cc
